--- a/views/home.erb
+++ b/views/home.erb
@@ -21,37 +21,59 @@
 	</div>
 </div>
 
+<!--   Preloader   -->
+
+<!--   <div class="preloader-wrapper big active">
+    <div class="spinner-layer spinner-blue-only">
+      <div class="circle-clipper left">
+        <div class="circle"></div>
+      </div><div class="gap-patch">
+        <div class="circle"></div>
+      </div><div class="circle-clipper right">
+        <div class="circle"></div>
+      </div>
+    </div>
+  </div> -->
+
 <!--   Sliders   -->
 
 <div class="slider white">
 	<ul class="slides">
 		<li>
-			<img id="slide1" src="./images/belarus3.jpg"> <!-- random image -->
-			<div class="caption left-align">
-				<h3>Kronospan-Smorgon signed a deal with BERSEY in Belarus</h3>
-				<h5 class="light grey-text text-lighten-3">Power Plant construction(60MW) will commence in 2017</h5>
-			</div>
+			<a href="/news1">
+				<img id="slide1" src="./images/belarus3.jpg"> <!-- random image -->
+				<div class="caption left-align">
+					<h3>Kronospan-Smorgon signed a deal with BERSEY in Belarus</h3>
+					<h5 class="light grey-text text-lighten-3">Power Plant construction(60MW) will commence in 2017</h5>
+				</div>
+			</a>
 		</li>
 		<li>
-			<img id="slide2" src="./images/Belarus.jpg">
-			<div class="caption left-align">
-				<h3>Pinskdrev signed a deal with BERSEY</h3>
-				<h5 class="light grey-text text-lighten-3">Construction will commence soon.</h5>
-			</div>
+			<a href="/news2">
+				<img id="slide2" src="./images/Belarus.jpg">
+				<div class="caption left-align">
+					<h3>Pinskdrev signed a deal with BERSEY</h3>
+					<h5 class="light grey-text text-lighten-3">Construction will commence soon.</h5>
+				</div>
+			</a>
 		</li>
 		<li>
-			<img id="slide3" src="./images/slide3.jpg"> 
-			<div class="caption right-align">
-				<h3>Ongoing projects in Romania and Russia</h3>
-				<h5 class="light grey-text text-lighten-3">Power Plants</h5>
-			</div>
+			<a href="/news3">
+				<img id="slide3" src="./images/slide3.jpg"> 
+				<div class="caption right-align">
+					<h3>Ongoing projects in Romania and Russia</h3>
+					<h5 class="light grey-text text-lighten-3">Power Plants</h5>
+				</div>
+			</a>
 		</li>
 		<li>
-			<img id="slide4" src="./images/slide4.jpg"> 
-			<div class="caption center-align">
-				<h3>Research colobration with CNRS laboratory in France</h3>
-				<h5 class="light grey-text text-lighten-3">Innovation Projects</h5>
-			</div>
+			<a href="/news4">
+				<img id="slide4" src="./images/slide4.jpg"> 
+				<div class="caption center-align">
+					<h3>Research colobration with CNRS laboratory in France</h3>
+					<h5 class="light grey-text text-lighten-3">Innovation Projects</h5>
+				</div>
+			</a>
 		</li>
 	</ul>
 </div>
@@ -76,11 +98,11 @@
 <!--   Parallax Image Section FIRE  -->
 
 <div class="parallax-container valign-wrapper">
-		<div class="container">
-			<div class="row">
-				<h4 class="header col s12 white-text text-lighten-3">Turkey`s leading boiler tank producer</h4>
-			</div>
+	<div class="container">
+		<div class="row">
+			<h4 class="header col s12 white-text text-lighten-3">Turkey`s leading boiler tank producer</h4>
 		</div>
+	</div>
 	<div class="parallax"><img id="fire-img" src="./images/factory.jpg" alt="Unsplashed fire"></div>
 </div>
 
@@ -134,7 +156,7 @@
 
 <!--   FOOTER  -->
 
-<footer class="page-footer grey darken-4">
+<footer class="page-footer grey darken-1">
 	<div class="container">
 		<div class="row">
 			<div class="col l6 s12">
