--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,6 +20,8 @@
 					</a>
 				</ul>
 				<ul id="mobile-demo" class="side-nav">
+					<li><a href="/products">HOME</a></li>
+					<li><a href="/products">ABOUT US</a></li>
 					<li><a href="/products">PRODUCTS</a></li>
 					<li><a href="/references">REFERENCES</a></li>
 					<li><a href="/projects">PROJECTS</a></li>
@@ -27,7 +29,8 @@
 					<li><a href="/contactus">CONTACT</a></li>
 				</ul>
 				<ul id="navbar" class="right hide-on-med-and-down">
-					<li><a href="/"><strong>HOME</strong></a></li>
+					<li><a href="/" class="nav-btn"><strong>HOME</strong></a></li>
+					<li><a href="/aboutus" class="nav-btn"><strong>ABOUT US</strong></a></li>
 					<li><a href="/products" class="nav-btn"><strong>PRODUCTS</strong></a></li>
 					<li><a href="/references" class="nav-btn"><strong>REFERENCES</strong></a></li>
 					<li><a href="/projects" class="nav-btn"><strong>PROJECTS</strong></a></li>
@@ -43,13 +46,14 @@
 <main>
 <%= yield %>
 </main>
-<footer class="page-footer grey darken-4">
-	<div class="footer-copyright grey darken-4">
+<footer class="page-footer grey darken-1">
+	<div class="footer-copyright grey darken-1">
 		<div class="container">
 			<p class= "right grey-text text-lighten-4">© 2017 by BERSEY LTD STI. All rights reserved.</p>
 		</div>
 	</div>
-</footer>	
+</footer>
+<script type="text/javascript" src = /js/cookies.js></script>	
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="/js/materialize.js"></script>
 <script src="/js/home.js"></script>
