--- a/views/news3.erb
+++ b/views/news3.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col l9">
-            <h4>About Us</h4>
+            <h3>NEWS 3</h3>
 
             <div class="divider"></div>
 
