--- a/views/products.erb
+++ b/views/products.erb
@@ -1,109 +1,93 @@
 <div class="image-container valign-wrapper">
   <div class="container ">
     <div class="row">
-    <div class="col l6 white-text">
-        <h5><a href="/products/scotch" class="btn-large">Scotch Type Steam Boilers</a></h5>
+      <div class="col l6 white-text center">
+        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
+          <a href="/products/scotch" class="product-list">
+            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
+            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
+            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
+            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
+            y="38" x="108">Scotch Type Steam Boilers</text>
+          </a>
+        </svg>
       </div>
-      <div class="col l6 white-text"><h5><a href="/products/waterpipe" class="btn-large product-list">Water Pipe Steam Boilers</a></h5></div>
+      <div class="col l6 white-text center">
+        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
+          <a href="/products/scotch" class="product-list">
+            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
+            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
+            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
+            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
+            y="38" x="108">Hot Water Boilers</text>
+          </a>
+        </svg>
+      </div>
     </div>
     <div class="row">
-    <div class="col l6 white-text">
-        <h5><a href="/products/wasteheat" class="btn-large product-list">Waste Heat Boilers</a></h5>
+      <div class="col l6 white-text center">
+        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
+          <a href="/products/scotch" class="product-list">
+            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
+            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
+            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
+            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
+            y="38" x="108">Scotch Type Steam Boilers</text>
+          </a>
+        </svg>
       </div>
-      <div class="col l6 white-text"><h5><a href="/products/thermal" class="btn-large product-list">Thermal Oil Heaters</a></h5></div>
+      <div class="col l6 white-text center">
+        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
+          <a href="/products/scotch" class="product-list">
+            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
+            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
+            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
+            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
+            y="38" x="108">Hot Water Boilers</text>
+          </a>
+        </svg>
+      </div>
     </div>
     <div class="row">
-    <div class="col l6 white-text">
-        <h5><a href="/products/fluidized" class="btn-large product-list">Fluidized Bed Boilers</a></h5>
+      <div class="col l6 white-text center">
+        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
+          <a href="/products/scotch" class="product-list">
+            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
+            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
+            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
+            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
+            y="38" x="108">Scotch Type Steam Boilers</text>
+          </a>
+        </svg>
       </div>
-      <div class="col l6 white-text"><h5><a href="/products/biomass" class="btn-large product-list">Biomass Fuel Boilers</a></h5></div>
+      <div class="col l6 white-text center">
+        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
+          <a href="/products/scotch" class="product-list">
+            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
+            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
+            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
+            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
+            y="38" x="108">Hot Water Boilers</text>
+          </a>
+        </svg>
+      </div>
     </div>
     <div class="row">
-    <div class="col l6 white-text">
-        <h5><a href="/products/hotwater" class="btn-large product-list">Hot Water Boilers</a></h5>
+      <div class="col l6 white-text center">
+        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
+          <a href="/products/scotch" class="product-list">
+            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
+            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
+            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
+            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
+            y="38" x="108">Scotch Type Steam Boilers</text>
+          </a>
+        </svg>
       </div>
-</div>
-<!-- <div class="row">
-  <div class="container">
-    <div class="col s6 m4">
-      <div class="card">
-        <div class="card-image">
-          <a href="/products/scotch"><img src="images/Belarus.jpg"></a>
-        </div>
-        <div class="card-content blue-grey darken-4">
-          <h6 class="center white-text">Scotch Type Steam Boilers</h6>
-        </div>
-      </div>
-    </div>
-    <div class="col s6 m4">
-      <div class="card">
-        <div class="card-image">
-          <a href="/products/waterpipe"><img src="images/Belarus.jpg"></a>
-        </div>
-        <div class="card-content blue-grey darken-4">
-          <h6 class="center white-text">Water Pipe Steam Boilers</h6>
-        </div>
-      </div>
-    </div>
-    <div class="col s6 m4">
-      <div class="card">
-        <div class="card-image">
-          <a href="/products/thermal"><img src="images/Belarus.jpg"></a>
-        </div>
-        <div class="card-content blue-grey darken-4">
-          <h6 class="center white-text">Thermal Oil Heaters</h6>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="container">
-    <div class="col s6 m4">
-      <div class="card">
-        <div class="card-image">
-          <a href="/products/biomass"><img src="images/Belarus.jpg"></a>
-        </div>
-        <div class="card-content blue-grey darken-4">
-          <h6 class="center white-text">Biomass Fuel Boilers</h6>
-        </div>
-      </div>
-    </div>
-    <div class="col s6 m4">
-      <div class="card">
-        <div class="card-image">
-          <a href="/products/hotwater"><img src="images/Belarus.jpg"></a>
-        </div>
-        <div class="card-content blue-grey darken-4">
-          <h6 class="center white-text">Hot Water Boilers</h6>
-        </div>
-      </div>
-    </div>
-    <div class="col s6 m4">
-      <div class="card">
-        <div class="card-image">
-          <a href="/products/wasteheat"><img src="images/Belarus.jpg"></a>
-        </div>
-        <div class="card-content blue-grey darken-4">
-          <h6 class="center white-text">Waste Heat Boilers</h6>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="container">
-    <div class="col s6 m4">
-      <div class="card">
-        <div class="card-image">
-          <a href="/products/fluidized"><img src="images/Belarus.jpg"></a>
-        </div>
-        <div class="card-content blue-grey darken-4">
-          <h6 class="center white-text">Fluidized Bed Boilers</h6>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
+    </div> 
+  </div>    
+</div>      
+
+
 
 
