--- a/views/references.erb
+++ b/views/references.erb
@@ -7,7 +7,7 @@
 			<div class="col s12">
 				<ul class="collapsible" data-collapsible="accordion">
 					<li>
-						<div class="collapsible-header referencesheader white-text blue-grey darken-4"><a href="#!" class="secondary-content"><i class="material-icons"><b>keyboard_arrow_down</b></i></a><b>THERMAL OIL HEATERS</b></div>
+						<div class="collapsible-header referencesheader blue-text white"><a href="#!" class="secondary-content"><i class="material-icons">keyboard_arrow_down</i></a>THERMAL OIL HEATERS</div>
 						<div class="collapsible-body referencesbody">
 							<table class ="striped responsive-table bordered centered">
 								<thead>
@@ -1151,7 +1151,7 @@
 			<div class="col s12">
 				<ul class="collapsible" data-collapsible="accordion">
 					<li>
-						<div class="collapsible-header referencesheader white-text blue-grey darken-4"><a href="#!" class="secondary-content"><i class="material-icons"><b>keyboard_arrow_down</b></i></a><b>SCOTCH TYPE STEAM BOILERS</b></div>
+						<div class="collapsible-header referencesheader blue-text white"><a href="#!" class="secondary-content"><i class="material-icons">keyboard_arrow_down</i></a>SCOTCH TYPE STEAM BOILERS</div>
 						<div class="collapsible-body referencesbody">
 							<table class ="striped responsive-table bordered">
 								<thead>
@@ -1888,7 +1888,7 @@
 			<div class="col s12">
 				<ul class="collapsible" data-collapsible="accordion">
 					<li>
-						<div class="collapsible-header referencesheader white-text blue-grey darken-4"><a href="#!" class="secondary-content"><i class="material-icons"><b>keyboard_arrow_down</b></i></a><b>WATER TUBE STEAM BOILERS</b></div>
+						<div class="collapsible-header referencesheader blue-text white"><a href="#!" class="secondary-content"><i class="material-icons">keyboard_arrow_down</i></a>WATER TUBE STEAM BOILERS</div>
 						<div class="collapsible-body referencesbody">
 							<table class ="striped responsive-table bordered">
 								<thead>
@@ -2041,7 +2041,7 @@
 			<div class="col s12">
 				<ul class="collapsible" data-collapsible="accordion">
 					<li>
-						<div class="collapsible-header referencesheader white-text blue-grey darken-4"><a href="#!" class="secondary-content"><i class="material-icons"><b>keyboard_arrow_down</b></i></a><b>FLUIDIZED BED STEAM BOILER</b></div>
+						<div class="collapsible-header referencesheader blue-text white"><a href="#!" class="secondary-content"><i class="material-icons">keyboard_arrow_down</i></a>FLUIDIZED BED STEAM BOILER</div>
 						<div class="collapsible-body referencesbody">
 							<table class ="striped responsive-table bordered">
 								<thead>
