--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@font-face {
+    font-family: 'RundschriftPro';
+    src: url('../fonts/rundschriftpro/RundschriftPro-webfont.woff2') format('woff2'),
+         url('../fonts/rundschriftpro/RundschriftPro-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 * {
   margin: 0;
@@ -53,9 +61,9 @@
   margin-right: 5px;
   display: inline-block;
   color: #0099ff;
-  font-family: 'Baloo Bhaina', sans-serif;
-  font-size: 4em;
-  font-weight: normal;
+  font-family: 'RundschriftPro';
+  font-weight: lighter;
+  font-size: 4.8em;
   opacity: 1;
   transition: all 3s ease;
   line-height: 56px;
@@ -315,13 +323,17 @@ div.referencesbody > table.striped > tbody > tr > td.costumers{
 }
 .referencesheader{
   font-weight: 300;
+  font-family: "RundschriftPro";
+  font-size: 1rem;
+  letter-spacing: 1.5px;
+  border-radius: 5px;
 }
 /*=============================================================================================================*/
 /*****PRODUCTS********/                           
 /*==============================================================================================================*/
 
 .product-list{
-  width: 399px;
+  width: 300px;
 }
 .image-container{
   height: 88vh;
@@ -331,6 +343,9 @@ div.referencesbody > table.striped > tbody > tr > td.costumers{
   -o-background-size: cover;
   background-size: cover;
   z-index: -100;
+}
+#product-button{
+  width: 250px;
 }
 
 /*=============================================================================================================*/
