--- a/views/home.erb
+++ b/views/home.erb
@@ -100,7 +100,7 @@
 <div class="parallax-container valign-wrapper">
 	<div class="container">
 		<div class="row">
-			<h4 class="header col s12 white-text text-lighten-3">Turkey`s leading boiler tank producer</h4>
+			<h4 class="header col s12 white-text text-lighten-3" style="letter-spacing: 1px;">Turkey`s leading boiler tank producer</h4>
 		</div>
 	</div>
 	<div class="parallax"><img id="fire-img" src="./images/factory.jpg" alt="Unsplashed fire"></div>
@@ -147,7 +147,7 @@
 	<div class="section">
 		<div class="container">
 			<div class="row center">
-				<h4 class="header col s12 white-text text-lighten-5">Exporting to Russia, Belarus, Romania and Middle East</h4>
+				<h4 class="header col s12 white-text text-lighten-5" style="letter-spacing: 1px;">Exporting to Russia, Belarus, Romania and Middle East</h4>
 			</div>
 		</div>
 	</div>
@@ -156,25 +156,25 @@
 
 <!--   FOOTER  -->
 
-<footer class="page-footer grey darken-1">
+<footer class="page-footer grey darken-4">
 	<div class="container">
 		<div class="row">
 			<div class="col l6 s12">
-				<h5 class="white-text">Contact</h5>
-				<p class="grey-text text-lighten-4">BERSEY SINAI ve TIBBI CIHAZLAR IMALAT ve TIC. LTD. STI.</p>
-				<p class="grey-text text-lighten-4">Söğütlüçeşme Mah. Halkalı Cad. No:257 Bina:4 Sefaköy, 34295</p>
-				<p class="grey-text text-lighten-4">T: +90 212 693 74 74</p>
-				<p class="grey-text text-lighten-4">F: +90 212 495 48 50</p>
-				<p class="grey-text text-lighten-4">info@berseykazan.com</p>
+				<h5 class="grey-text text-lighten-2">Contact</h5>
+				<p class="grey-text text-lighten-1">BERSEY SINAI ve TIBBI CIHAZLAR IMALAT ve TIC. LTD. STI.</p>
+				<p class="grey-text text-lighten-1">Söğütlüçeşme Mah. Halkalı Cad. No:257 Bina:4 Sefaköy, 34295</p>
+				<p class="grey-text text-lighten-1">T: +90 212 693 74 74</p>
+				<p class="grey-text text-lighten-1">F: +90 212 495 48 50</p>
+				<p class="grey-text text-lighten-1">info@berseykazan.com</p>
 			</div>
 			<div class="col l3 s12">
-				<h5 class="white-text">Legal</h5>
+				<h5 class="grey-text text-lighten-2">Legal</h5>
 				<ul>
-					<li><a class="white-text" href="/terms">Terms and Conditions</a></li>
+					<li><a class="grey-text text-lighten-1" href="/terms">Terms and Conditions</a></li>
 				</ul>
 			</div>
 			<div class="col l3 s12">
-				<h5 class="white-text">Follow Us</h5>
+				<h5 class="grey-text text-lighten-2">Follow Us</h5>
 				<ul>
 					<li><a class="white-text" href="https://www.linkedin.com/company-beta/10671411/" target=_blank><img id="linkedin" src=./images/linkedin.png></a></li>
 				</ul>
