--- a/views/products.erb
+++ b/views/products.erb
@@ -1,91 +1,26 @@
 <div class="image-container valign-wrapper">
   <div class="container ">
     <div class="row">
-      <div class="col l6 white-text center">
-        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
-          <a href="/products/scotch" class="product-list">
-            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
-            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
-            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
-            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
-            y="38" x="108">Scotch Type Steam Boilers</text>
-          </a>
-        </svg>
-      </div>
-      <div class="col l6 white-text center">
-        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
-          <a href="/products/scotch" class="product-list">
-            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
-            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
-            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
-            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
-            y="38" x="108">Hot Water Boilers</text>
-          </a>
-        </svg>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col l6 white-text center">
-        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
-          <a href="/products/scotch" class="product-list">
-            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
-            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
-            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
-            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
-            y="38" x="108">Scotch Type Steam Boilers</text>
-          </a>
-        </svg>
-      </div>
-      <div class="col l6 white-text center">
-        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
-          <a href="/products/scotch" class="product-list">
-            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
-            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
-            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
-            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
-            y="38" x="108">Hot Water Boilers</text>
-          </a>
-        </svg>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col l6 white-text center">
-        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
-          <a href="/products/scotch" class="product-list">
-            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
-            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
-            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
-            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
-            y="38" x="108">Scotch Type Steam Boilers</text>
-          </a>
-        </svg>
-      </div>
-      <div class="col l6 white-text center">
-        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
-          <a href="/products/scotch" class="product-list">
-            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
-            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
-            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
-            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
-            y="38" x="108">Hot Water Boilers</text>
-          </a>
-        </svg>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col l6 white-text center">
-        <svg id="product-button" viewBox="-1.114 -0.512 219 66">
-          <a href="/products/scotch" class="product-list">
-            <path fill="white" stroke="#0099ff" stroke-width="5" d="M214.549,32.921
-            c0,16.802-13.621,30.422-30.422,30.422H32.921C16.12,63.343,2.5,49.723,2.5,32.921l0,0C2.5,16.12,16.12,2.5,32.921,2.5h151.206
-            C200.928,2.5,214.549,16.12,214.549,32.921L214.549,32.921z"></path>
-            <text fill="#0099ff" text-anchor="middle" font-family="RundschriftPro" font-weight="100" font-size="14px" style="text-transform:uppercase;"
-            y="38" x="108">Scotch Type Steam Boilers</text>
-          </a>
-        </svg>
-      </div>
-    </div> 
-  </div>    
+      <div class="col s12">
+        <div class="collection" id="collection-products">
+          <a href="./products/scotch" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>SCOTCH TYPE STEAM BOILERS</a>
+          <br>
+          <a href="./products/thermal" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>THERMAL OIL HEATERS</a>
+          <br>
+          <a href="./products/waterpipe" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>WATER TUBE STEAM BOILERS</a>
+          <br>
+          <a href="./products/fluidized" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>FLUIDIZED BED STEAM BOILER</a>
+          <br>
+          <a href="./products/wasteheat" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>WASTE HEAT BOILERS</a>
+          <br>
+          <a href="./products/hotwater" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>HOT WATER BOILERS</a>
+          <br>
+          <a href="./products/biomass" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>BIOMASS FUEL BOILERS</a>
+          <br>
+        </div>
+      </div> 
+    </div>    
+  </div>
 </div>      
 
 
