--- a/views/scotch.erb
+++ b/views/scotch.erb
@@ -3,8 +3,8 @@
 		<div class="container">
 			<div class="col s12 m6">
 				<div class="card-panel teal blue-grey darken-4">
-					<h5 class="white-text">WHY THERMAL OIL HEATERS ?</h5><p class="white-text">In many different industrial processes where the production is carried out with heat exchange at high temperatures, conventional methods such as superheated water and steam can meet the requirements. The utilization of water and steam usually implies high operating, maintenance costs and system monitoring requirements due to pre-treatment of process water.</p>
-					<p class="white-text light"> Thermal Oil Application is an alternative and a cost-effective solution for reaching elevated temperatures at low operating pressures for multiple heat receivers in the process.</p>
+					<h5 class="white-text">3 PASS SCOTCH TYPE BOILERS</h5><p class="white-text">In scotch type boilers, for hot water, superheated water and steam production, oil fired, gas fired and oil gas co-fired boilers, with high efficient 3 pass design are within our manufacturing capability for various production capacity and pressure ratings.</p>
+					<p class="white-text light"> Ber</p>
 				</div>
 			</div>
 			<div class="col s12 m6">
