--- a/views/home.erb
+++ b/views/home.erb
@@ -50,7 +50,7 @@
 		</li>
 		<li>
 			<a href="/news2">
-				<img id="slide2" src="./images/Belarus.jpg">
+				<img id="slide2" src="./images/belarus.jpg">
 				<div class="caption left-align">
 					<h3>Pinskdrev signed a deal with BERSEY</h3>
 					<h5 class="light grey-text text-lighten-3">Construction will commence soon.</h5>
