--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,22 +20,22 @@
 					</a>
 				</ul>
 				<ul id="mobile-demo" class="side-nav">
-					<li><a href="/products">HOME</a></li>
-					<li><a href="/products">ABOUT US</a></li>
-					<li><a href="/products">PRODUCTS</a></li>
-					<li><a href="/references">REFERENCES</a></li>
-					<li><a href="/projects">PROJECTS</a></li>
-					<li><a href="/career">CAREERS</a></li>
-					<li><a href="/contactus">CONTACT</a></li>
+					<li><a href="/">ANA SAYFA</a></li>
+					<li><a href="/hakkimizda">HAKKIMIZDA</a></li>
+					<li><a href="/urunler">ÜRÜNLER</a></li>
+					<li><a href="/referanslar">REFARANSLAR</a></li>
+					<!-- <li><a href="/projects">PROJECTS</a></li> -->
+					<!-- <li><a href="/career">CAREERS</a></li> -->
+					<li><a href="/iletisim">İLETİŞİM</a></li>
 				</ul>
 				<ul id="navbar" class="right hide-on-med-and-down">
-					<li><a href="/" class="nav-btn"><strong>HOME</strong></a></li>
-					<li><a href="/aboutus" class="nav-btn"><strong>ABOUT US</strong></a></li>
-					<li><a href="/products" class="nav-btn"><strong>PRODUCTS</strong></a></li>
-					<li><a href="/references" class="nav-btn"><strong>REFERENCES</strong></a></li>
-					<li><a href="/projects" class="nav-btn"><strong>PROJECTS</strong></a></li>
-					<li><a href="/career" class="nav-btn"><strong>CAREERS</strong></a></li>
-					<li><a href="/contactus" class="nav-btn"><strong>CONTACT</strong></a></li>
+					<li><a href="/" class="nav-btn">ANA SAYFA</a></li>
+					<li><a href="/hakkimizda" class="nav-btn">HAKKIMIZDA</a></li>
+					<li><a href="/urunler" class="nav-btn">ÜRÜNLER</a></li>
+					<li><a href="/referanslar" class="nav-btn">REFARANSLAR</a></li>
+					<!-- <li><a href="/projects" class="nav-btn"><strong>PROJECTS</strong></a></li> -->
+					<!-- <li><a href="/career" class="nav-btn"><strong>CAREERS</strong></a></li> -->
+					<li><a href="/iletisim" class="nav-btn">İLETİŞİM</a></li>
 				</ul>
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="small material-icons">menu</i></a>
 			</div>
@@ -49,12 +49,12 @@
 <footer class="page-footer grey darken-4">
 	<div class="footer-copyright grey darken-4">
 		<div class="container">
-			<p class= "right grey-text text-lighten-1">© 2017 by BERSEY LTD STI. All rights reserved.</p>
+			<p class= "right grey-text text-lighten-1">© 2017 by BERSEY LTD STI. Bütün hakları saklıdır.</p>
 		</div>
 	</div>
 </footer>
 <script type="text/javascript" src = /js/cookies.js></script>	
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="/js/jquery.js"></script>
 <script src="/js/home.js"></script>
 <script src="/js/materialize.js"></script>
 <script type="text/javascript">
