--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,11 @@
 
-@import url('https://fonts.googleapis.com/css?family=Ubuntu');
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 @font-face {
-  font-family: 'RundschriftPro';
-  src: url('../fonts/rundschriftpro/RundschriftPro-webfont.woff2') format('woff2'),
-  url('../fonts/rundschriftpro/RundschriftPro-webfont.woff') format('woff');
+  font-family: 'Roboto';
+  src: url('../fonts/roboto/Roboto-Light.woff') format('woff'),
+  url('../fonts/roboto/Roboto-Light.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
-
 }
 
 * {
@@ -61,9 +59,8 @@
   margin-right: 5px;
   display: inline-block;
   color: #0099ff;
-  font-family: 'RundschriftPro';
-  font-weight: lighter;
-  font-size: 4.8em;
+  font-family: "Times New Roman" , sans-serif;
+  font-size: 4.2em;
   opacity: 1;
   transition: all 3s ease;
   line-height: 56px;
@@ -71,7 +68,7 @@
 .welcome-text-sub li{
   display: inline-block;
   color: #000;
-  font-family: 'Baloo Bhaina', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.5em;
   font-weight: normal;
   opacity: 1;
@@ -211,6 +208,20 @@ footer.page-footer {
 #fire-img{
   filter:brightness(70%); 
 }
+
+.slide-text{
+  font-weight: 600;
+  font-family: "Roboto";
+  letter-spacing: 1.5px;
+  border-radius: 5px;
+}
+
+.slide-subtext{
+  font-weight: 600;
+  font-family: "Roboto";
+  letter-spacing: 1.5px;
+  border-radius: 5px;
+}
 /*=============================================================================================================*/
 /*MAIN PAGE*/                           
 /*==============================================================================================================*/
@@ -227,7 +238,7 @@ footer.page-footer {
     width: 96px;
     height: auto;
     display: none;
-    margin-top: 9px;
+    margin-top: 15px;
     margin-left: 9px;
   }
 }
@@ -322,8 +333,8 @@ div.referencesbody > table.striped > tbody > tr > td.costumers{
   text-align: left;
 }
 .referencesheader{
-  font-weight: 300;
-  font-family: "RundschriftPro";
+  font-weight: 600;
+  font-family: "Roboto";
   font-size: 1rem;
   letter-spacing: 1.5px;
   border-radius: 5px;
@@ -350,8 +361,8 @@ div.referencesbody > table.striped > tbody > tr > td.costumers{
 
 #collection-products{
   border: none;
-  font-weight: 300;
-  font-family: "RundschriftPro";
+  font-weight: 600;
+  font-family: "Roboto";
   font-size: 1rem;
   letter-spacing: 1.5px;
   border-radius: 5px;
@@ -360,9 +371,11 @@ div.referencesbody > table.striped > tbody > tr > td.costumers{
 /*=============================================================================================================*/
 /*****SCOTCH TYPE BOILERS********/                           
 /*==============================================================================================================*/
-.thermal-list{
-  list-style-type: disc !important;
-  margin-top: 10px; 
+ul.black-text li.thermal-list{
+  margin-top: 10px;
+  margin-left: 5px;
+  list-style-type: circle;
+  list-style-position: inside;
 }
 #scotch-container{
   height: 100vh;
@@ -372,7 +385,7 @@ div.referencesbody > table.striped > tbody > tr > td.costumers{
 /*=============================================================================================================*/
 /*****CAREERS********/                           
 /*==============================================================================================================*/
-#career{
+/*#career{
   position: relative;
   font-weight: 500;
 }
@@ -389,7 +402,7 @@ div.referencesbody > table.striped > tbody > tr > td.costumers{
   background-size: cover;
   z-index: -1;
   opacity: 0.3;
-}
+}*/
 
 /*=============================================================================================================*/
 /*****TERMS AND LEGAL********/                           
