--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -2146,7 +2146,7 @@
  *    without disabling user zoom.
  */
 html {
-  font-family: "RundschriftPro", sans-serif;
+  font-family: "Roboto", sans-serif;
   /* 1 */
   -ms-text-size-adjust: 100%;
   /* 2 */
@@ -2543,7 +2543,6 @@ html {
 }
 
 ul:not(.browser-default) {
-  padding-left: 0;
   list-style-type: none;
 }
 
@@ -4142,7 +4141,7 @@ nav ul a {
   display: block;
   padding: 0 15px;
   cursor: pointer;
-  font-family:"RundschriftPro";
+  font-family:"Roboto";
   letter-spacing: 1.5px;
 }
 
